updated file structure.

--- a/js/jsTestDriver.conf
+++ b/js/jsTestDriver.conf
@@ -2,19 +2,19 @@ server: http://localhost:4224
 
 load:
   - libs/*.js
-  - bin/util.js
-  - bin/model/puzzle.js
-  - bin/model/piece.js
-  - bin/model/half_edge.js
-  - bin/model/loop.js
-  - bin/cutter/cutter.js
-  - bin/cutter/grid_cutter.js
-  - bin/cutter/standard_grid_cutter.js
-  - bin/command/command.js
-  - bin/command/translate_command.js
-  - bin/command/rotate_command.js
-  - bin/command/merge_command.js
-  - bin/controller/browser_controller.js
+  - src/util.js
+  - src/model/puzzle.js
+  - src/model/piece.js
+  - src/model/half_edge.js
+  - src/model/loop.js
+  - src/cutter/cutter.js
+  - src/cutter/grid_cutter.js
+  - src/cutter/standard_grid_cutter.js
+  - src/command/command.js
+  - src/command/translate_command.js
+  - src/command/rotate_command.js
+  - src/command/merge_command.js
+  - src/controller/browser_controller.js
 
 test:
   - test/js/*.js
